--- a/01-yad/lib/sparky-aptus-appcenter/development.html
+++ b/01-yad/lib/sparky-aptus-appcenter/development.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 23, 2020 by pavroo
+Last update: January 21, 2021 by pavroo
 -->
 	<head>
 		<title>Development | APTus AppCenter</title>
@@ -71,16 +71,18 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_cudatext" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Cudatext</a>
 		</td>
+		<td><a href="aptus://devtoo_deepl-linux" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />DeepL-Linux</a>
+		</td>
 		<td><a href="aptus://devtoo_edi" class="button1"><img src="images/text-script.svg" class="appicon"><br />EDI</a>
 		</td>
 		<td><a href="aptus://devtoo_eflete" class="button1"><img src="images/text-script.svg" class="appicon"><br />Eflete</a>
 		</td>
 		<td><a href="aptus://devtoo_emacs-gtk" class="button1"><img src="images/emacs.svg" class="appicon"><br />Emacs GTK</a>
 		</td>
-		<td><a href="aptus://devtoo_enventor" class="button1"><img src="images/text-script.svg" class="appicon"><br />Enventor</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_enventor" class="button1"><img src="images/text-script.svg" class="appicon"><br />Enventor</a>
+		</td>
 		<td><a href="aptus://devtoo_eric" class="button1"><img src="images/python.svg" class="appicon"><br />Eric</a>
 		</td>
 		<td><a href="aptus://devtoo_erlang-observer" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Erlang Observer</a>
@@ -91,10 +93,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_ghex" class="button1"><img src="images/text-script.svg" class="appicon"><br />Ghex</a>
 		</td>
-		<td><a href="aptus://devtoo_git" class="button1"><img src="images/git.svg" class="appicon"><br />Git</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_git" class="button1"><img src="images/git.svg" class="appicon"><br />Git</a>
+		</td>
 		<td><a href="aptus://devtoo_gitg" class="button1"><img src="images/git.svg" class="appicon"><br />Gitg</a>
 		</td>
 		<td><a href="aptus://devtoo_git-gui" class="button1"><img src="images/git.svg" class="appicon"><br />Git GUI</a>
@@ -105,10 +107,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_glade" class="button1"><img src="images/glade.svg" class="appicon"><br />Glade</a>
 		</td>
-		<td><a href="aptus://devtoo_golang" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Go Lang</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_golang" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Go Lang</a>
+		</td>
 		<td><a href="aptus://devtoo_groovy" class="button1"><img src="images/java.svg" class="appicon"><br />Groovy</a>
 		</td>
 		<td><a href="aptus://devtoo_hexyl" class="button1"><img src="images/default-icon.svg" class="appicon"><br />hexyl</a>
@@ -119,10 +121,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_kdevelop" class="button1"><img src="images/kdevelop.svg" class="appicon"><br />KDevelop</a>
 		</td>
-		<td><a href="aptus://devtoo_kompare" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kompare</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_kompare" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kompare</a>
+		</td>
 		<td><a href="aptus://devtoo_latex-cjk-all" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeX CJK</a>
 		</td>
 		<td><a href="aptus://devtoo_latexdraw" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeXDraw</a>
@@ -133,10 +135,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_lazarus" class="button1"><img src="images/text-script.svg" class="appicon"><br />Lazarus</a>
 		</td>
-		<td><a href="aptus://devtoo_leo" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Leo Editor</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_leo" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Leo Editor</a>
+		</td>
 		<td><a href="aptus://devtoo_lyx" class="button1"><img src="images/tex.svg" class="appicon"><br />LyX</a>
 		</td>
 		<td><a href="aptus://devtoo_meld" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Meld</a>
@@ -147,10 +149,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_nim" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Nim</a>
 		</td>
-		<td><a href="aptus://devtoo_nodejs" class="button1"><img src="images/javascript.svg" class="appicon"><br />Node.js</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_nodejs" class="button1"><img src="images/javascript.svg" class="appicon"><br />Node.js</a>
+		</td>
 		<td><a href="aptus://devtoo_npm" class="button1"><img src="images/javascript.svg" class="appicon"><br />npm</a>
 		</td>
 		<td><a href="aptus://devtoo_perl" class="button1"><img src="images/perl.svg" class="appicon"><br />Perl</a>
@@ -161,15 +163,13 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_python3" class="button1"><img src="images/python.svg" class="appicon"><br />Python3</a>
 		</td>
-		<td><a href="aptus://devtoo_qtcreator" class="button1"><img src="images/qt.svg" class="appicon"><br />Qt Creator</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_qtcreator" class="button1"><img src="images/qt.svg" class="appicon"><br />Qt Creator</a>
+		</td>
 		<td><a href="aptus://devtoo_ruby" class="button1"><img src="images/ruby.svg" class="appicon"><br />Ruby</a>
 		</td>
 		<td><a href="aptus://devtoo_sigil" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Sigil</a>
-		</td>
-		<td><a href="aptus://devtoo_spyder" class="button1"><img src="images/python.svg" class="appicon"><br />Spyder</a>
 		</td>
 		<td><a href="aptus://devtoo_subversion" class="button1"><img src="images1/vector.svg" class="appicon"><br />Subversion</a>
 		</td>
