--- a/01-yad/lib/sparky-aptus-appcenter/net-p2p.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-p2p.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 18, 2020 by pavroo
+Last update: January 21, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> Peer2Peer | APTus AppCenter</title>
@@ -43,14 +43,10 @@ Last update: July 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netp2p_bitstormlite" class="button1"><img src="images/bittorrent.svg" class="appicon"><br />BitStormLite</a>
 		</td>
-		<!--<td><a href="aptus://netp2p_bittornado-gui" class="button1"><img src="images/bittorrent.svg" class="appicon"><br />BitTornado GUI</a>
-		</td>-->
 		<td><a href="aptus://netp2p_ctorrent" class="button1"><img src="images/bittorrent.svg" class="appicon"><br />CTorrent</a>
 		</td>
 		<td><a href="aptus://netp2p_deluge" class="button1"><img src="images/deluge.svg" class="appicon"><br />Deluge</a>
 		</td>
-		<!--<td><a href="aptus://netp2p_gtk-gnutella" class="button1"><img src="images/download.svg" class="appicon"><br />GTK Gnutella</a>
-		</td>-->
 		<td><a href="aptus://netp2p_ktorrent" class="button1"><img src="images/ktorrent.svg" class="appicon"><br />KTorrent</a>
 		</td>
 		<!--<td><a href="aptus://netp2p_mldonkey-gui" class="button1"><img src="images/download.svg" class="appicon"><br />MLDonkey GUI</a>
@@ -62,6 +58,8 @@ Last update: July 18, 2020 by pavroo
 		<td><a href="aptus://netp2p_rtorrent" class="button1"><img src="images/bittorrent.svg" class="appicon"><br />rtorrent</a>
 		</td>
 		<td><a href="aptus://netp2p_transmission" class="button1"><img src="images/transmission.svg" class="appicon"><br />Transmission</a>
+		</td>
+		<td><a href="aptus://netp2p_tribler" class="button1"><img src="images/bittorrent.svg" class="appicon"><br />Tribler</a>
 		</td>
 		<td><a href="aptus://netp2p_vuze" class="button1"><img src="images/bittorrent.svg" class="appicon"><br />Vuze</a>
 		</td>
