--- a/01-yad/lib/sparky-aptus-appcenter/graphics-others.html
+++ b/01-yad/lib/sparky-aptus-appcenter/graphics-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 17, 2020 by pavroo
+Last update: January 21, 2021 by pavroo
 -->
 	<head>
 		<title>Graphics -> Others | APTus AppCenter</title>
@@ -39,6 +39,8 @@ Last update: June 17, 2020 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://graoth_cheese" class="button1"><img src="images/cheese.svg" class="appicon"><br />Cheese</a>
+		</td>
 		<td><a href="aptus://graoth_gtkam" class="button1"><img src="images/gtkam.svg" class="appicon"><br />Gtkam</a>
 		</td>
 		<td><a href="aptus://graoth_kamera" class="button1"><img src="images/gtkam.svg" class="appicon"><br />Kamera</a>
@@ -48,8 +50,6 @@ Last update: June 17, 2020 by pavroo
 		<td><a href="aptus://graoth_qcamera" class="button1"><img src="images/camera-web.svg" class="appicon"><br />QCamera</a>
 		</td>
 		<td><a href="aptus://graoth_webcamoid" class="button1"><img src="images/camera-web.svg" class="appicon"><br />Webcamoid</a>
-		</td>
-		<td>
 		</td>
 	</tr>
 </tbody>
