--- a/01-yad/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 3, 2020 by pavroo
+Last update: January 21, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -69,6 +69,8 @@ Last update: December 3, 2020 by pavroo
 	<tr>
 		<td><a href="aptus://netweb_google-chrome-stable" class="button1"><img src="images/google-chrome.svg" class="appicon"><br />Google Chrome</a>
 		</td>
+		<td><a href="aptus://netweb_epiphany-hv3" class="button1"><img src="images/web-browser.svg" class="appicon"><br />hv3</a>
+		</td>
 		<td><a href="aptus://netweb_icecat" class="button1"><img src="images0/icecat.png" class="appicon"><br />IceCat</a>
 		</td>
 		<td><a href="aptus://netweb_iridium-browser" class="button1"><img src="images0/iridium.png" class="appicon"><br />Iridium</a>
@@ -77,10 +79,10 @@ Last update: December 3, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netweb_konqueror" class="button1"><img src="images/konqueror.svg" class="appicon"><br />Konqueror</a>
 		</td>
-		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
+		</td>
 		<td><a href="aptus://netweb_lynx" class="button1"><img src="images/terminal.svg" class="appicon"><br />Lynx</a>
 		</td>
 		<td><a href="aptus://netweb_midori" class="button1"><img src="images0/midori.svg" class="appicon"><br />Midori</a>
@@ -91,10 +93,10 @@ Last update: December 3, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netweb_netsurf-gtk" class="button1"><img src="images0/netsurf.png" class="appicon"><br />NetSurf GTK</a>
 		</td>
-		<td><a href="aptus://netweb_next" class="button1"><img src="images/terminal.svg" class="appicon"><br />Next</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_next" class="button1"><img src="images/terminal.svg" class="appicon"><br />Next</a>
+		</td>
 		<td><a href="aptus://netweb_opera-stable" class="button1"><img src="images/opera.svg" class="appicon"><br />Opera</a>
 		</td>
 		<td><a href="aptus://netweb_otter-browser" class="button1"><img src="images0/otter.png" class="appicon"><br />Otter</a>
@@ -105,10 +107,10 @@ Last update: December 3, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netweb_seamonkey" class="button1"><img src="images0/seamonkey.png" class="appicon"><br />SeaMonkey</a>
 		</td>
-	<td><a href="aptus://netweb_slimjet" class="button1"><img src="images/slimjet.svg" class="appicon"><br />Slimjet</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_slimjet" class="button1"><img src="images/slimjet.svg" class="appicon"><br />Slimjet</a>
+		</td>
 		<td><a href="aptus://netweb_tor-browser" class="button1"><img src="images0/tor-browser.png" class="appicon"><br />TOR Browser</a>
 		</td>
 		<td><a href="aptus://netweb_vivaldi-stable" class="button1"><img src="images/vivaldi.svg" class="appicon"><br />Vivaldi</a>
