--- a/01-yad/lib/sparky-aptus-appcenter/office-note.html
+++ b/01-yad/lib/sparky-aptus-appcenter/office-note.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 15, 2020 by pavroo
+Last update: January 21, 2021 by pavroo
 -->
 	<head>
 		<title>Office -> Notes | APTus AppCenter</title>
@@ -63,6 +63,10 @@ Last update: December 15, 2020 by pavroo
 		</td>
 		<td><a href="aptus://offnot_rhinote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Rhinote</a>
 		</td>
+		<td><a href="aptus://offnot_tomboy-ng" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Tomboy</a>
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offnot_zettlr" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Zettlr</a>
 		</td>
 	</tr>
