--- a/01-yad/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -69,7 +69,7 @@ Last update: January 21, 2021 by pavroo
 	<tr>
 		<td><a href="aptus://netweb_google-chrome-stable" class="button1"><img src="images/google-chrome.svg" class="appicon"><br />Google Chrome</a>
 		</td>
-		<td><a href="aptus://netweb_epiphany-hv3" class="button1"><img src="images/web-browser.svg" class="appicon"><br />hv3</a>
+		<td><a href="aptus://netweb_hv3" class="button1"><img src="images/web-browser.svg" class="appicon"><br />hv3</a>
 		</td>
 		<td><a href="aptus://netweb_icecat" class="button1"><img src="images0/icecat.png" class="appicon"><br />IceCat</a>
 		</td>
