--- a/01-yad/lib/sparky-aptus-appcenter/accessories-terminals.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-terminals.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 23, 2020 by pavroo
+Last update: February 18, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Terminal Emulators | APTus AppCenter</title>
@@ -51,10 +51,12 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accter_gnome-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />GNOME Terminal</a>
 		</td>
-		<td><a href="aptus://accter_konsole" class="button1"><img src="images/terminal.svg" class="appicon"><br />Konsole</a>
+		<td><a href="aptus://accter_guake" class="button1"><img src="images/terminal.svg" class="appicon"><br />Guake</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accter_konsole" class="button1"><img src="images/terminal.svg" class="appicon"><br />Konsole</a>
+		</td>
 		<td><a href="aptus://accter_lxterminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />LXterminal</a>
 		</td>
 		<td><a href="aptus://accter_mate-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />MATE Terminal</a>
@@ -65,10 +67,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accter_pterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />Pterm</a>
 		</td>
-		<td><a href="aptus://accter_qterminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />Qterminal</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accter_qterminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />Qterminal</a>
+		</td>
 		<td><a href="aptus://accter_sakura" class="button1"><img src="images/terminal.svg" class="appicon"><br />Sakura</a>
 		</td>
 		<td><a href="aptus://accter_spterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />SPterm</a>
@@ -79,10 +81,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accter_terminology" class="button1"><img src="images/terminal.svg" class="appicon"><br />Terminology</a>
 		</td>
-		<td><a href="aptus://accter_termit" class="button1"><img src="images/terminal.svg" class="appicon"><br />Termit</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accter_termit" class="button1"><img src="images/terminal.svg" class="appicon"><br />Termit</a>
+		</td>
 		<td><a href="aptus://accter_tilda" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilda</a>
 		</td>
 		<!--<td><a href="aptus://accter_tilix" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilix</a>
