--- a/01-yad/lib/sparky-aptus-appcenter/games-tools.html
+++ b/01-yad/lib/sparky-aptus-appcenter/games-tools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 15, 2020 by pavroo
+Last update: February 18, 2021 by pavroo
 -->
 	<head>
 		<title>Games -> Tools | APTus AppCenter</title>
@@ -86,6 +86,8 @@ Last update: July 15, 2020 by pavroo
 		<td><a href="aptus://gamtoo_sparky-ia" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky IA</a>
 		</td>
 		<td><a href="aptus://gamtoo_steam" class="button1"><img src="images/steam.svg" class="appicon"><br />Steam</a>
+		</td>
+		<td><a href="aptus://gamtoo_steamtinkerlaunch" class="button1"><img src="images/steam.svg" class="appicon"><br />Steam Tinker Launch</a>
 		</td>
 		<td><a href="aptus://gamtoo_xsystem35" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />XSystem35</a>
 		</td>
