--- a/01-yad/lib/sparky-aptus-appcenter/net-email.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-email.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 8, 2020 by pavroo
+Last update: February 18, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> e-Mail | APTus AppCenter</title>
@@ -60,6 +60,8 @@ Last update: August 8, 2020 by pavroo
 		<td><a href="aptus://netema_sylpheed" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Sylpheed</a>
 		</td>
 		<td><a href="aptus://netema_thunderbird" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Thunderbird</a>
+		</td>
+		<td><a href="aptus://netema_tutanota-desktop" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Tutanota Desktop</a>
 		</td>
 	</tr>
 </tbody>
