--- a/01-yad/lib/sparky-aptus-appcenter/net-communication.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 18, 2020 by pavroo
+Last update: February 19, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -57,18 +57,20 @@ Last update: October 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netcom_gajim" class="button1"><img src="images/gajim.svg" class="appicon"><br />Gajim</a>
 		</td>
+		<td><a href="aptus://netcom_gomuks" class="button1"><img src="images/terminal.svg" class="appicon"><br />Gomuks</a>
+		</td>
 		<td><a href="aptus://netcom_hexchat" class="button1"><img src="images/hexchat.svg" class="appicon"><br />HexChat</a>
 		</td>
 		<td><a href="aptus://netcom_ircii" class="button1"><img src="images/irc.svg" class="appicon"><br />ircII</a>
 		</td>
 		<td><a href="aptus://netcom_irssi" class="button1"><img src="images/irc.svg" class="appicon"><br />Irssi</a>
 		</td>
-		<td><a href="aptus://netcom_konversation" class="button1"><img src="images/im.svg" class="appicon"><br />Konversation</a>
-		</td>
-		<!--<td><a href="aptus://netcom_kopete" class="button1"><img src="images/im.svg" class="appicon"><br />Kopete</a>
-		</td>-->
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_konversation" class="button1"><img src="images/im.svg" class="appicon"><br />Konversation</a>
+		</td>
+		<td><a href="aptus://netcom_kopete" class="button1"><img src="images/im.svg" class="appicon"><br />Kopete</a>
+		</td>
 		<td><a href="aptus://netcom_kvirc" class="button1"><img src="images/irc.svg" class="appicon"><br />KVIrc</a>
 		</td>
 		<!--<td><a href="aptus://netcom_linphone" class="button1"><img src="images/phone.svg" class="appicon"><br />Linphone</a>
@@ -79,12 +81,12 @@ Last update: October 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netcom_mumble" class="button1"><img src="images/im.svg" class="appicon"><br />Mumble</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_nheko" class="button1"><img src="images/im.svg" class="appicon"><br />Nheko</a>
 		</td>
 		<td><a href="aptus://netcom_pidgin" class="button1"><img src="images/im.svg" class="appicon"><br />Pidgin</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
 		</td>
 		<td><a href="aptus://netcom_quassel" class="button1"><img src="images/quassel.svg" class="appicon"><br />Quassel</a>
@@ -93,12 +95,12 @@ Last update: October 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netcom_scrollz" class="button1"><img src="images/irc.svg" class="appicon"><br />ScrollZ</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_sic" class="button1"><img src="images/irc.svg" class="appicon"><br />sic</a>
 		</td>
 		<td><a href="aptus://netcom_skypeforlinux" class="button1"><img src="images/skype.svg" class="appicon"><br />Skype</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_smuxi" class="button1"><img src="images/im.svg" class="appicon"><br />Smuxi</a>
 		</td>
 		<td><a href="aptus://webextra_teamspeak" class="button1"><img src="images/im.svg" class="appicon"><br />TeamSpeak Installer</a>
@@ -107,12 +109,12 @@ Last update: October 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netcom_tinyirc" class="button1"><img src="images/irc.svg" class="appicon"><br />TinyIRC</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_tkabber" class="button1"><img src="images/im.svg" class="appicon"><br />Tkabber</a>
 		</td>
 		<td><a href="aptus://netcom_twinkle" class="button1"><img src="images/phone.svg" class="appicon"><br />Twinkle</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_weechat" class="button1"><img src="images/im.svg" class="appicon"><br />WeeChat</a>
 		</td>
 	</tr>
