--- a/01-yad/lib/sparky-aptus-appcenter/accessories-terminals.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-terminals.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: February 18, 2021 by pavroo
+Last update: March 2, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Terminal Emulators | APTus AppCenter</title>
@@ -39,8 +39,10 @@ Last update: February 18, 2021 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<!--<td><a href="aptus://accter_cool-retro-term" class="button1"><img src="images/terminal.svg" class="appicon"><br />Cool Retro Term</a>
-		</td>-->
+		<td><a href="aptus://accter_alacritty" class="button1"><img src="images/terminal.svg" class="appicon"><br />Alacritty</a>
+		</td>
+		<td><a href="aptus://accter_cool-retro-term" class="button1"><img src="images/terminal.svg" class="appicon"><br />Cool Retro Term</a>
+		</td>
 		<td><a href="aptus://accter_deepin-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />Deepin Terminal</a>
 		</td>
 		<td><a href="aptus://accter_edex-ui" class="button1"><img src="images/terminal.svg" class="appicon"><br />eDEX-UI</a>
@@ -49,12 +51,12 @@ Last update: February 18, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accter_fbterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />FBterm</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accter_gnome-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />GNOME Terminal</a>
 		</td>
 		<td><a href="aptus://accter_guake" class="button1"><img src="images/terminal.svg" class="appicon"><br />Guake</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accter_konsole" class="button1"><img src="images/terminal.svg" class="appicon"><br />Konsole</a>
 		</td>
 		<td><a href="aptus://accter_lxterminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />LXterminal</a>
@@ -63,12 +65,12 @@ Last update: February 18, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accter_mlterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />MLterm</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accter_pangoterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />Pangoterm</a>
 		</td>
 		<td><a href="aptus://accter_pterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />Pterm</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accter_qterminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />Qterminal</a>
 		</td>
 		<td><a href="aptus://accter_sakura" class="button1"><img src="images/terminal.svg" class="appicon"><br />Sakura</a>
@@ -77,20 +79,22 @@ Last update: February 18, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accter_stterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />STterm</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accter_terminator" class="button1"><img src="images/terminal.svg" class="appicon"><br />Terminator</a>
 		</td>
 		<td><a href="aptus://accter_terminology" class="button1"><img src="images/terminal.svg" class="appicon"><br />Terminology</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accter_termit" class="button1"><img src="images/terminal.svg" class="appicon"><br />Termit</a>
 		</td>
 		<td><a href="aptus://accter_tilda" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilda</a>
 		</td>
-		<!--<td><a href="aptus://accter_tilix" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilix</a>
-		</td>-->
+		<td><a href="aptus://accter_tilix" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilix</a>
+		</td>
 		<td><a href="aptus://accter_xfce4-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />Xfce4 Terminal</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accter_xterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />Xterm </a>
 		</td>
 		<td><a href="aptus://accter_yeahconsole" class="button1"><img src="images/terminal.svg" class="appicon"><br />YeahConsole</a>
