--- a/01-yad/lib/sparky-aptus-appcenter/accessories-display.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-display.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 19, 2020 by pavroo
+Last update: March 2, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Display Managers | APTus AppCenter</title>
@@ -58,6 +58,8 @@ Last update: July 19, 2020 by pavroo
 		<td><a href="aptus://accdis_nodm" class="button1"><img src="images/login.svg" class="appicon"><br />NoDM</a>
 		</td>
 		<td><a href="aptus://accdis_sddm" class="button1"><img src="images/login.svg" class="appicon"><br />SDDM</a>
+		</td>
+		<td><a href="aptus://accdis_tbsb" class="button1"><img src="images/terminal.svg" class="appicon"><br />TBSM</a>
 		</td>
 		<td><a href="aptus://accdis_xdm" class="button1"><img src="images/login.svg" class="appicon"><br />XDM</a>
 		</td>
