--- a/01-yad/lib/sparky-aptus-appcenter/accessories-monitoring.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-monitoring.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 3, 2020 by pavroo
+Last update: March 2, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Monitoring | APTus AppCenter</title>
@@ -89,12 +89,14 @@ Last update: December 3, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accmon_screenfetch" class="button1"><img src="images/terminal.svg" class="appicon"><br />screenFetch</a>
 		</td>
-		<td><a href="aptus://accmon_xfce4-sensors-plugin" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Xfce Sensors Plugin</a>
+		<td><a href="aptus://accmon_sparky-system" class="button1"><img src="images/computer.svg" class="appicon"><br />Sparky System</a>
 		</td>
-		<td><a href="aptus://accmon_xfce4-taskmanager" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Xfce Task Manager</a>
+		<td><a href="aptus://accmon_xfce4-sensors-plugin" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Xfce Sensors Plugin</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accmon_xfce4-taskmanager" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Xfce Task Manager</a>
+		</td>
 		<td><a href="aptus://accmon_xsensors" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Xsensors</a>
 		</td>
 	</tr>
