--- a/01-yad/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 23, 2020 by pavroo
+Last update: February 20, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Players | APTus AppCenter</title>
@@ -41,6 +41,8 @@ Last update: December 23, 2020 by pavroo
 	<tr>
 		<td><a href="aptus://audpla_alsaplayer-gtk" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />AlsaPlayer GUI</a>
 		</td>
+		<td><a href="aptus://audpla_amarok" class="button1"><img src="images/amarok.svg" class="appicon"><br />Amarok</a>
+		</td>
 		<td><a href="aptus://audpla_ario" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Ario</a>
 		</td>
 		<td><a href="aptus://audpla_audacious" class="button1"><img src="images/audacious.svg" class="appicon"><br />Audacious</a>
@@ -49,10 +51,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_cantata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Cantata</a>
 		</td>
-		<td><a href="aptus://audpla_clementine" class="button1"><img src="images/clementine.svg" class="appicon"><br />Clemetine</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_clementine" class="button1"><img src="images/clementine.svg" class="appicon"><br />Clemetine</a>
+		</td>
 		<td><a href="aptus://audpla_cmus" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Cmus</a>
 		</td>
 		<td><a href="aptus://audpla_cozy" class="button1"><img src="images/audio-headphones.svg" class="appicon"><br />Cozy</a>
@@ -63,10 +65,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_deepin-music" class="button1"><img src="images/gnome-player.svg" class="appicon"><br />Deepin Music</a>
 		</td>
-		<td><a href="aptus://audpla_dradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Dradio</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_dradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Dradio</a>
+		</td>
 		<td><a href="aptus://audpla_elisa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Elisa</a>
 		</td>
 		<td><a href="aptus://audpla_exaile" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Exaile</a>
@@ -77,10 +79,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_gogglesmm" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goggles Music Manager</a>
 		</td>
-		<td><a href="aptus://audpla_goobox" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goobox</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_goobox" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goobox</a>
+		</td>
 		<td><a href="aptus://audpla_gradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Gradio</a>
 		</td>
 		<td><a href="aptus://audpla_gxmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />GXMMS2</a>
@@ -91,10 +93,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_mellowplayer" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />MellowPlayer</a>
 		</td>
-		<td><a href="aptus://audpla_moc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MOC</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_moc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MOC</a>
+		</td>
 		<td><a href="aptus://audpla_mpd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MPD</a>
 		</td>
 		<td><a href="aptus://audpla_ncmpc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />ncmpc</a>
@@ -105,10 +107,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_pragha" class="button1"><img src="images/play-music.svg" class="appicon"><br />Pragha</a>
 		</td>
-		<td><a href="aptus://audpla_qmmp" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />QMMP</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_qmmp" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />QMMP</a>
+		</td>
 		<td><a href="aptus://audpla_quodlibet" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Quod Libet</a>
 		</td>
 		<td><a href="aptus://audpla_radio" class="button1"><img src="images/radio.svg" class="appicon"><br />Radio</a>
@@ -119,10 +121,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_sayonara" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Sayonara</a>
 		</td>
-		<td><a href="aptus://audpla_silverjuke" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Silverjuke</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_silverjuke" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Silverjuke</a>
+		</td>
 		<td><a href="aptus://audpla_sonata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Sonata</a>
 		</td>
 		<td><a href="aptus://audpla_sparky-play" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Play MP3</a>
@@ -133,10 +135,10 @@ Last update: December 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audpla_strawberry" class="button1"><img src="images0/strawberry.svg" class="appicon"><br />Strawberry</a>
 		</td>
-		<td><a href="aptus://audpla_xmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />XMMS2</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_xmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />XMMS2</a>
+		</td>
 		<td><a href="aptus://audpla_yarock" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Yarock</a>
 		</td>
 	</tr>
