--- a/01-yad/lib/sparky-aptus-appcenter/accessories-usb.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-usb.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 20, 2020 by pavroo
+Last update: March 12, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> USB Management | APTus AppCenter</title>
@@ -49,21 +49,17 @@ Last update: June 20, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accusb_python3-multibootusb" class="button1"><img src="images/usb-creator.svg" class="appicon">MultibootUSB<br /></a>
 		</td>
-		<td><a href="aptus://accusb_scolasync" class="button1"><img src="images/usb-creator.svg" class="appicon"><br />ScolaSync</a>
+		<td><a href="aptus://accusb_multios-usb" class="button1"><img src="images/terminal.svg" class="appicon"><br />MultiOS-USB</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accusb_scolasync" class="button1"><img src="images/usb-creator.svg" class="appicon"><br />ScolaSync</a>
+		</td>
 		<td><a href="aptus://accusb_sparky-live-usb-creator" class="button1"><img src="images/usb-creator.svg" class="appicon"><br />Sparky LiveUSB Creator</a>
 		</td>
 		<td><a href="aptus://accusb_sparky-usb-formatter" class="button1"><img src="images/usb.svg" class="appicon"><br />Sparky USB Formatter</a>
 		</td>
 		<td><a href="aptus://accusb_woeusb" class="button1"><img src="images/wine.svg" class="appicon"><br />WoeUSB</a>
-		</td>
-		<td>
-		</td>
-		<td>
-		</td>
-		<td>
 		</td>
 	</tr>
 </tbody>
