--- a/01-yad/lib/sparky-aptus-appcenter/accessories-filemanagers.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-filemanagers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 20, 2020 by pavroo
+Last update: March 16, 2020 by pavroo
 -->
 	<head>
 		<title>Accessories -> File Managers | APTus AppCenter</title>
@@ -71,16 +71,18 @@ Last update: June 20, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accfil_pcmanfm-qt" class="button1"><img src="images/file-manager.svg" class="appicon"><br />PCmanFM Qt</a>
 		</td>
+		<td><a href="aptus://accfil_polo-file-manager" class="button1"><img src="images/file-manager.svg" class="appicon"><br />Polo</a>
+		</td>
 		<td><a href="aptus://accfil_qtfm" class="button1"><img src="images/file-manager.svg" class="appicon"><br />QtFM</a>
 		</td>
 		<td><a href="aptus://accfil_ranger" class="button1"><img src="images/terminal.svg" class="appicon"><br />Ranger</a>
 		</td>
 		<td><a href="aptus://accfil_rox-filer" class="button1"><img src="images/file-manager.svg" class="appicon"><br />ROX Filer</a>
 		</td>
-		<td><a href="aptus://accfil_spacefm-gtk3" class="button1"><img src="images/file-manager.svg" class="appicon"><br />SpaceFM GTK3</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accfil_spacefm-gtk3" class="button1"><img src="images/file-manager.svg" class="appicon"><br />SpaceFM GTK3</a>
+		</td>
 		<td><a href="aptus://accfil_thunar" class="button1"><img src="images/file-manager.svg" class="appicon"><br />Thunar</a>
 		</td>
 		<td><a href="aptus://accfil_tkdesk" class="button1"><img src="images/file-manager.svg" class="appicon"><br />TkDesk</a>
@@ -91,6 +93,8 @@ Last update: June 20, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accfil_worker" class="button1"><img src="images/terminix.svg" class="appicon"><br />Worker</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accfil_xfe" class="button1"><img src="images/terminix.svg" class="appicon"><br />Xfe</a>
 		</td>
 	</tr>
