--- a/01-yad/lib/sparky-aptus-appcenter/graphics-viewers.html
+++ b/01-yad/lib/sparky-aptus-appcenter/graphics-viewers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 17, 2020 by pavroo
+Last update: March 16, 2021 by pavroo
 -->
 	<head>
 		<title>Graphics -> Viewers | APTus AppCenter</title>
@@ -61,23 +61,27 @@ Last update: June 17, 2020 by pavroo
 		</td>
 		<td><a href="aptus://gravie_lximage-qt" class="button1"><img src="images/lximage.svg" class="appicon"><br />Lximage-Qt</a>
 		</td>
+		<td><a href="aptus://gravie_mirage" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Mirage</a>
+		</td>
+		<td><a href="aptus://gravie_phototonic" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Phototonic</a>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://gravie_pqiv" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Pqiv</a>
+		</td>
+		<td><a href="aptus://gravie_qiv" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Quick Image Viewer</a>
+		</td>
 		<td><a href="aptus://gravie_ristretto" class="button1"><img src="images/ristretto.svg" class="appicon"><br />Ristretto</a>
 		</td>
 		<td><a href="aptus://gravie_shotwell" class="button1"><img src="images/shotwell.svg" class="appicon"><br />Shotwell</a>
 		</td>
-	</tr>
-	<tr>
+		<td><a href="aptus://gravie_sxiv" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Sxiv</a>
+		</td>
 		<td><a href="aptus://gravie_viewnior" class="button1"><img src="images/eog.svg" class="appicon"><br />Viewnior</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gravie_xnview" class="button1"><img src="images/lximage.svg" class="appicon"><br />XnView</a>
-		</td>
-		<td>
-		</td>
-		<td>
-		</td>
-		<td>
-		</td>
-		<td>
 		</td>
 	</tr>
 </tbody>
