--- a/01-yad/lib/sparky-aptus-appcenter/media-subtitles.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-subtitles.html
@@ -3,10 +3,10 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 18, 2020 by pavroo
+Last update: March 16, 2021 by pavroo
 -->
 	<head>
-		<title>Multimedia -> Subtitles | APTus AppCenter</title>
+		<title>Multimedia -> Subtitle | APTus AppCenter</title>
 		<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 		<script src="./js/lang.js" type="text/javascript"></script>
 	</head>
@@ -39,17 +39,15 @@ Last update: June 18, 2020 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://medsub_aegisub" class="button1"><img src="images/gnome-subtitles.svg" class="appicon"><br />Aegisub</a>
+		</td>
+		<td><a href="aptus://medsub_gaupol" class="button1"><img src="images/gnome-subtitles.svg" class="appicon"><br />Gaupol</a>
+		</td>
 		<td><a href="aptus://medsub_gnome-subtitles" class="button1"><img src="images/gnome-subtitles.svg" class="appicon"><br />GNOME Subtitles</a>
 		</td>
 		<td><a href="aptus://medsub_subtitlecomposer" class="button1"><img src="images/gnome-subtitles.svg" class="appicon"><br />Subtitle Composer</a>
 		</td>
 		<td><a href="aptus://medsub_subtitleeditor" class="button1"><img src="images/gnome-subtitles.svg" class="appicon"><br />Subtitle Editor</a>
-		</td>
-		<td>
-		</td>
-		<td>
-		</td>
-		<td>
 		</td>
 	</tr>
 </tbody>
