--- a/01-yad/lib/sparky-aptus-appcenter/accessories-usb.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-usb.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 16, 2021 by pavroo
+Last update: April 21, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> USB Management | APTus AppCenter</title>
@@ -58,6 +58,10 @@ Last update: March 16, 2021 by pavroo
 		<td><a href="aptus://accusb_sparky-live-usb-creator" class="button1"><img src="images/usb-creator.svg" class="appicon"><br />Sparky LiveUSB Creator</a>
 		</td>
 		<td><a href="aptus://accusb_sparky-usb-formatter" class="button1"><img src="images/usb.svg" class="appicon"><br />Sparky USB Formatter</a>
+		</td>
+		<td><a href="aptus://accusb_ventoy" class="button1"><img src="images/terminal.svg" class="appicon"><br />Ventoy</a>
+		</td>
+		<td><a href="aptus://accusb_ventoy-gui" class="button1"><img src="images/usb-creator.svg" class="appicon"><br />Ventoy GUI</a>
 		</td>
 		<td><a href="aptus://accusb_woeusb" class="button1"><img src="images/wine.svg" class="appicon"><br />WoeUSB</a>
 		</td>
