--- a/01-yad/lib/sparky-aptus-appcenter/accessories-filemanagers.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-filemanagers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 16, 2020 by pavroo
+Last update: April 21, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> File Managers | APTus AppCenter</title>
@@ -83,6 +83,8 @@ Last update: March 16, 2020 by pavroo
 	<tr>
 		<td><a href="aptus://accfil_spacefm-gtk3" class="button1"><img src="images/file-manager.svg" class="appicon"><br />SpaceFM GTK3</a>
 		</td>
+		<td><a href="aptus://accfil_sunflower" class="button1"><img src="images/file-manager.svg" class="appicon"><br />Sunflower</a>
+		</td>
 		<td><a href="aptus://accfil_thunar" class="button1"><img src="images/file-manager.svg" class="appicon"><br />Thunar</a>
 		</td>
 		<td><a href="aptus://accfil_tkdesk" class="button1"><img src="images/file-manager.svg" class="appicon"><br />TkDesk</a>
@@ -91,10 +93,10 @@ Last update: March 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accfil_vifm" class="button1"><img src="images/terminal.svg" class="appicon"><br />Vifm</a>
 		</td>
-		<td><a href="aptus://accfil_worker" class="button1"><img src="images/terminix.svg" class="appicon"><br />Worker</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accfil_worker" class="button1"><img src="images/terminix.svg" class="appicon"><br />Worker</a>
+		</td>
 		<td><a href="aptus://accfil_xfe" class="button1"><img src="images/terminix.svg" class="appicon"><br />Xfe</a>
 		</td>
 	</tr>
