--- a/01-yad/lib/sparky-aptus-appcenter/games-emulators.html
+++ b/01-yad/lib/sparky-aptus-appcenter/games-emulators.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 16, 2020 by pavroo
+Last update: April 21, 2021 by pavroo
 -->
 	<head>
 		<title>Games -> Emulators | APTus AppCenter</title>
@@ -43,18 +43,18 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://gamemu_blastem" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />BlastEm</a>
 		</td>
-		<td><a href="aptus://gamemu_dolphin-emu" class="button1"><img src="images1/dolphin-emu.svg" class="appicon"><br />Dolphin</a>
-		</td>
+		<!--<td><a href="aptus://gamemu_dolphin-emu" class="button1"><img src="images1/dolphin-emu.svg" class="appicon"><br />Dolphin</a>
+		</td>-->
 		<td><a href="aptus://gamemu_dosbox" class="button1"><img src="images1/dosbox.svg" class="appicon"><br />DOSBox</a>
 		</td>
 		<td><a href="aptus://gamemu_dosemu" class="button1"><img src="images1/dosbox.svg" class="appicon"><br />DOSEMU</a>
 		</td>
 		<td><a href="aptus://gamemu_epsxe" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />ePSXe</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamemu_fceux" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />FCE Ultra X</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamemu_fs-uae-arcade" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />FS-UAE</a>
 		</td>
 		<td><a href="aptus://gamemu_gnome-video-arcade" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />GNOME Video Arcade</a>
@@ -65,10 +65,10 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://gamemu_higan" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Higan</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamemu_kega-fusion" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Kega Fusion</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamemu_mame" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />MAME</a>
 		</td>
 		<td><a href="aptus://gamemu_mednafen" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Mednafen</a>
@@ -79,26 +79,24 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://gamemu_mgba-sdl" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />mGBA SDL</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamemu_nestopia" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Nestopia</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamemu_osmose-emulator" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Osmose</a>
 		</td>
 		<td><a href="aptus://gamemu_pcsx2" class="button1"><img src="images1/pcsx.svg" class="appicon"><br />PCSX2</a>
-		</td>
-		<td><a href="aptus://gamemu_ppsspp" class="button1"><img src="images1/pcsx.svg" class="appicon"><br />PPSSPP</a>
 		</td>
 		<td><a href="aptus://gamemu_rlvm" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />rlvm</a>
 		</td>
 		<td><a href="aptus://gamemu_scummvm" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />ScummVM</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamemu_stella" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Stella</a>
 		</td>
 		<td><a href="aptus://gamemu_visualboyadvance" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Visual Boy Advance</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamemu_virtualjaguar" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Virtual Jaguar</a>
 		</td>
 		<td><a href="aptus://gamemu_yabause" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Yabause</a>
