--- a/01-yad/lib/sparky-aptus-appcenter/graphics-editors.html
+++ b/01-yad/lib/sparky-aptus-appcenter/graphics-editors.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 16, 2021 by pavroo
+Last update: April 21, 2021 by pavroo
 -->
 	<head>
 		<title>Graphics -> Editors | APTus AppCenter</title>
@@ -53,6 +53,8 @@ Last update: March 16, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_filmulator-gui" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Filmulator</a>
+		</td>
 		<td><a href="aptus://graedi_fotoxx" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Fotoxx</a>
 		</td>
 		<td><a href="aptus://graedi_freecad" class="button1"><img src="images/freecad.svg" class="appicon"><br />FreeCAD</a>
@@ -63,10 +65,10 @@ Last update: March 16, 2021 by pavroo
 		</td>
 		<td><a href="aptus://graedi_hugin" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />Hugin</a>
 		</td>
-		<td><a href="aptus://graedi_imagemagick" class="button1"><img src="images/imagemagick.svg" class="appicon"><br />ImageMagick</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_imagemagick" class="button1"><img src="images/imagemagick.svg" class="appicon"><br />ImageMagick</a>
+		</td>
 		<td><a href="aptus://graedi_inkscape" class="button1"><img src="images/inkscape.svg" class="appicon"><br />Inkscape</a>
 		</td>
 		<td><a href="aptus://graedi_ipe" class="button1"><img src="images/krita.svg" class="appicon"><br />Ipe</a>
@@ -79,10 +81,10 @@ Last update: March 16, 2021 by pavroo
 		</td>
 		<td><a href="aptus://graedi_krita" class="button1"><img src="images/krita.svg" class="appicon"><br />Krita</a>
 		</td>
-		<td><a href="aptus://graedi_lazpaint" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />LazPaint</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_lazpaint" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />LazPaint</a>
+		</td>
 		<td><a href="aptus://graedi_lightzone" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />LightZone</a>
 		</td>
 		<td><a href="aptus://graedi_meshlab" class="button1"><img src="images/krita.svg" class="appicon"><br />Meshlab</a>
@@ -93,10 +95,10 @@ Last update: March 16, 2021 by pavroo
 		</td>
 		<td><a href="aptus://graedi_photoflare" class="button1"><img src="images/krita.svg" class="appicon"><br />Photoflare</a>
 		</td>
-		<td><a href="aptus://graedi_posterazor" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Posterazor</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_posterazor" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Posterazor</a>
+		</td>
 		<td><a href="aptus://graedi_rawtherapee" class="button1"><img src="images/gcolor2.svg" class="appicon"><br />RawTherapee</a>
 		</td>
 		<td><a href="aptus://graedi_synfigstudio" class="button1"><img src="images/totem.svg" class="appicon"><br />Synfig Studio</a>
@@ -107,10 +109,10 @@ Last update: March 16, 2021 by pavroo
 		</td>
 		<td><a href="aptus://graedi_tuxpaint" class="button1"><img src="images/krita.svg" class="appicon"><br />Tux Paint</a>
 		</td>
-		<td><a href="aptus://graedi_view3dscene" class="button1"><img src="images/krita.svg" class="appicon"><br />View 3D Scene</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_view3dscene" class="button1"><img src="images/krita.svg" class="appicon"><br />View 3D Scene</a>
+		</td>
 		<td><a href="aptus://graedi_wings3d" class="button1"><img src="images/freecad.svg" class="appicon"><br />Wings 3D</a>
 		</td>
 		<td><a href="aptus://graedi_xpaint" class="button1"><img src="images/krita.svg" class="appicon"><br />XPaint</a>
