--- a/01-yad/lib/sparky-aptus-appcenter/net-communication.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: February 20, 2021 by pavroo
+Last update: April 21, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -95,6 +95,8 @@ Last update: February 20, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_rocketchat" class="button1"><img src="images/im.svg" class="appicon"><br />Rocket.Chat</a>
+		</td>
 		<td><a href="aptus://netcom_scrollz" class="button1"><img src="images/irc.svg" class="appicon"><br />ScrollZ</a>
 		</td>
 		<td><a href="aptus://netcom_sic" class="button1"><img src="images/irc.svg" class="appicon"><br />sic</a>
@@ -105,10 +107,10 @@ Last update: February 20, 2021 by pavroo
 		</td>
 		<td><a href="aptus://webextra_teamspeak" class="button1"><img src="images/im.svg" class="appicon"><br />TeamSpeak Installer</a>
 		</td>
-		<td><a href="aptus://netcom_telegram-desktop" class="button1"><img src="images/telegram.svg" class="appicon"><br />Telegram Desktop</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_telegram-desktop" class="button1"><img src="images/telegram.svg" class="appicon"><br />Telegram Desktop</a>
+		</td>
 		<td><a href="aptus://netcom_tinyirc" class="button1"><img src="images/irc.svg" class="appicon"><br />TinyIRC</a>
 		</td>
 		<td><a href="aptus://netcom_tkabber" class="button1"><img src="images/im.svg" class="appicon"><br />Tkabber</a>
