--- a/01-yad/lib/sparky-aptus-appcenter/net-email.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-email.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: February 18, 2021 by pavroo
+Last update: April 21, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> e-Mail | APTus AppCenter</title>
@@ -56,6 +56,8 @@ Last update: February 18, 2021 by pavroo
 		<td><a href="aptus://netema_kmail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />KMail</a>
 		</td>
 		<td><a href="aptus://netema_mutt" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Mutt</a>
+		</td>
+		<td><a href="aptus://netema_protonmail-bridge" class="button1"><img src="images/terminal.svg" class="appicon"><br />ProtonMail Bridge</a>
 		</td>
 		<td><a href="aptus://netema_sylpheed" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Sylpheed</a>
 		</td>
